generated-tests/tests/snapshots/tsx/generated_tests__tsx__test_generated_ambient_declaration.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
declare const value3: string;

AST:
(program
  (ambient_declaration
    (lexical_declaration
      (variable_declarator
        (identifier value3)
        (type_annotation
          (predefined_type)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value3",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
