generated-tests/tests/snapshots/tsx/generated_tests__tsx__test_generated_augmented_assignment_expression.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
x2 += y2

AST:
(program
  (expression_statement
    (augmented_assignment_expression
      (identifier x2)
      (identifier y2)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
