generated-tests/tests/snapshots/tsx/generated_tests__tsx__test_generated_break_statement.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
for (let i = 0; i < 10; i++) { break; }

AST:
(program
  (for_statement
    (lexical_declaration
      (variable_declarator
        (identifier i)
        (number)
      )
    )
    (expression_statement
      (binary_expression
        (identifier i)
        (number)
      )
    )
    (update_expression
      (identifier i)
    )
    (statement_block
      (break_statement)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "i",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
